--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,7 +69,7 @@ div {
 
 .chat-column {
   height: 100%;
-  padding: 0.9375rem 0 0.625rem 0;
+  padding: 0 0 0.625rem 0;
   margin: auto;
   text-align: left;
   max-width: 25rem;
@@ -77,7 +77,7 @@ div {
 }
 
 #scrollingChat {
-  margin: 0.75rem;
+  margin: 0;
   overflow-y: auto;
   overflow-x: hidden;
   height: calc(100% - 4rem);
@@ -177,7 +177,7 @@ div {
 
 .from-watson.latest.top p:before {
   content: ".";
-  color: #9855D4;
+  color: #0082FF;
   background-image: url("../img/marker_image.png");
   background-size: 0.3125rem 1.3125rem;
   position: absolute;
@@ -205,7 +205,7 @@ div {
 }
 
 #textInput.underline {
-  border-bottom: 2px solid #00B4A0;
+  border-bottom: 2px solid #0082FF;
 }
 
 ::-webkit-input-placeholder {
@@ -245,7 +245,7 @@ input:-moz-placeholder {
   opacity: 0;
 }
 
-#payload-column {
+/*#payload-column {
   font-family: Monaco, monospace;
   font-size: 0.75rem;
   letter-spacing: 0;
@@ -273,7 +273,7 @@ input:-moz-placeholder {
   padding: 0.5rem;
   padding-left: 2.5rem;
   background: #383D3E;
-}
+}*/
 
 .hide {
   display: none;
@@ -322,14 +322,14 @@ html{
   }
 
   .chat-column {
-    padding-top: 4rem;
+    padding-top: 0rem;
   }
 
-  #payload-column {
+  /*#payload-column {
     width: 0;
     max-width: none;
     min-width: initial;
-  }
+  }*/
 }
 
 /* IBM Design fonts https://github.ibm.com/Design/fonts */
